--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="dart_ast_node_viewer" />
+    <meta name="apple-mobile-web-app-title" content="Dart AST Node Viewer" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>dart_ast_node_viewer</title>
+    <title>Dart AST Node Viewer</title>
     <link rel="manifest" href="manifest.json" />
     <style>
       :root {
