Update theme primary color

--- a/web/index.html
+++ b/web/index.html
@@ -34,8 +34,8 @@
     <style>
       :root {
         --bg-color: #0d1418;
-        --text-color: #70d2ff;
-        --spinner-color: #70d2ff;
+        --text-color: #40C380;
+        --spinner-color: #40C380;
         --spinner-size: 1em;
         --icon-size: 1em;
       }
